--- a/style3.css
+++ b/style3.css
@@ -404,6 +404,25 @@ opacity: 0.7;
 	opacity:1
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 7.5px;
+  background-color: black;
+ 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+ 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 15px;
+ 
+}
 
 
 	
