--- a/small.css
+++ b/small.css
@@ -18,8 +18,7 @@ li {
 
 .img00 {
 	
-	
-	transform: translate(0%,-10%);
+	display: opacity: 0.3;
 }
 
 .table2 {
@@ -30,4 +29,18 @@ li {
 .XXY {
 
 	padding: 100px 0px;
+}
+
+.HH5 {
+
+class: fixed-top;
+	width: 50px;
+height: 45px;
+margin-top: 15px;
+opacity: 0.7;
+transition: width 1s;
+transition-delay: 2.5s;
+margin-left: auto;
+margin-right: auto;
+	
 }
